feat(gallery): render images using @for control flow

--- a/image-gallery/src/app/gallery/gallery.html
+++ b/image-gallery/src/app/gallery/gallery.html
@@ -1,1 +1,8 @@
-<p>gallery works!</p>
+<h2>Galeria d'imatges</h2>
+
+<div>
+    @for (image of imageGallery; track image.id) {
+        <app-image-item [image]="image"></app-image-item>
+    }
+</div>
+
