--- a/image-gallery/src/app/image-item/image-item.html
+++ b/image-gallery/src/app/image-item/image-item.html
@@ -1,3 +1,3 @@
-<div class="image-card">
+<div class="image-card" [class.featured]="isFeatured()">
       <img [src]="image().src" [alt]="image().alt">
 </div>
