--- a/image-gallery/src/app/image-item/image-item.html
+++ b/image-gallery/src/app/image-item/image-item.html
@@ -1,3 +1,3 @@
-<div class="image-card" [class.featured]="isFeatured()">
-      <img [src]="image().src" [alt]="image().alt">
-</div>
+<div class="rounded-xl overflow-hidden shadow-md transition-transform duration-200" [class.featured]="isFeatured()">
+      <img class="w-full h-auto block" [src]="image().src" [alt]="image().alt">
+</div> 
