--- a/image-gallery/src/app/gallery/gallery.html
+++ b/image-gallery/src/app/gallery/gallery.html
@@ -1,11 +1,14 @@
 <h2 class="text-3xl font-bold text-center mt-8 mb-4">Galeria d'imatges</h2>
 
-<div class="flex flex-wrap gap-6 justify-center p-6">
-    @for (image of imageGallery; track image.id; let i = $index) {
-        <app-image-item 
-        [image]="image"
-        [isFeatured]="i === 0">
-        </app-image-item>
-    }
+<div class="container mx-auto max-w-5xl px-4">
+    <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 ">
+        @for (image of imageGallery; track image.id; let i = $index) {
+            <app-image-item 
+            [image]="image"
+            [isFeatured]="i === 0">
+            </app-image-item>
+        }
+    </div>
 </div>
+
 
