--- a/image-gallery/src/app/image-item/image-item.html
+++ b/image-gallery/src/app/image-item/image-item.html
@@ -1,3 +1,3 @@
-<div class="rounded-xl overflow-hidden shadow-md transition-transform duration-200" [class.featured]="isFeatured()">
-      <img class="w-full h-auto block" [src]="image().src" [alt]="image().alt">
+<div class="rounded-xl overflow-hidden shadow-lg transition-transform duration-200 hover:scale-105" [class.featured]="isFeatured()">
+      <img class="w-full h-auto cover" [src]="image().src" [alt]="image().alt">
 </div> 
