--- a/image-gallery/src/app/image-item/image-item.html
+++ b/image-gallery/src/app/image-item/image-item.html
@@ -1,3 +1,4 @@
-<div class="rounded-xl overflow-hidden shadow-lg transition-transform duration-200 hover:scale-105" [class.featured]="isFeatured()">
-      <img class="w-full h-auto cover" [src]="image().src" [alt]="image().alt">
+<div class="container" >
+      <img class="w-full h-auto cover rounded-xl overflow-hidden shadow-lg transition-transform duration-200 hover:scale-105 mb-6" [src]="image().src" [alt]="image().alt" [class.featured]="isFeatured()">
+      <button class=" w-full bg-orange-400 hover:bg-orange-500 hover:text-white text-sm py-2 rounded-2xl shadow-md transition-colors duration-200" (click)="onDeleteClick($event)">Esborrar</button>
 </div> 
