--- a/image-gallery/src/app/gallery/gallery.html
+++ b/image-gallery/src/app/gallery/gallery.html
@@ -1,13 +1,15 @@
 <h2 class="text-3xl font-bold text-center mt-8 mb-4">Galeria d'imatges</h2>
 
-<div cdkDropList (cdkDropListDropped)="drop($event)" class="container mx-auto max-w-7xl px-4 py-8 grid grid-cols-5 gap-4">
-    <div cdkDrag class="w-full h-full">
+<div cdkDropList (cdkDropListDropped)="drop($event)" class="container mx-auto max-w-5xl px-4">
+    <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6 ">
         @for (image of imageGallery(); track image.id) {
-            <app-image-item 
-            [image]="image"
-            (deleteImage)="removeImage(image.id)"
-            [isFeatured]="image.id === featuredImageId()">
-            </app-image-item>
+            <div cdkDrag class="w-full h-full">
+                <app-image-item 
+                [image]="image"
+                (deleteImage)="removeImage(image.id)"
+                [isFeatured]="image.id === featuredImageId()">
+                </app-image-item>
+            </div>
         }
     </div>
 </div>
